test: add CargoRepositoryTest
Signed-off-by: Hantsy Bai <hantsy@gmail.com>